--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
+    "react-collapsed": "^4.1.2",
     "react-dom": "^18.3.1",
     "zod": "^3.23.3"
   },
