--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-collapsed": "^4.1.2",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
